2009-04-14  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/FilteredListSourceContents.cs:
	Don't change the browser height when the recommendations pane is shown
	(BGO #578896)

2009-04-14  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* src/Core/Banshee.ThickClient/Banshee.Preferences.Gui/PreferenceDialog.cs:
	Setting default height for the Preferences dialog (BGO #552620)

2009-04-14  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TaskStatusIcon.cs: Set
	the sensitivity based on whether any bg tasks are active, so less
	intrusive when there aren't, and in general, distinguishable.

2009-04-14  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* .gitignore: Added *.mdb

2009-04-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* tests/Analyzer/Analyzer.cs: Fix warnings.

2009-04-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLite3.cs:
	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLiteBase.cs:
	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLiteCommand.cs:
	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLiteConvert.cs:
	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLiteDataReader.cs:
	Performance fixes ported from upstream System.Data.Sqlite, making SqliteType
	a class (not struct) and avoid unnecessary calls to TypeNameToDbType.

2009-04-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Mono.Data.Sqlite/bnc-490021_mds-even-better.patch:
	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLiteConvert.cs:
	Building on Bertrand's patch, improve performance even more.

2009-04-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/tests/Performance/Makefile.am: Also build an exe, useful for
	drilling into a performance problem with mono --profile.

	* src/tests/Performance/PerformanceTests.cs: Categorize tests, add
	FetchTrack, LoadTrack, and Select* tests testing relatively low level db